And we plunge onward.

--- a/site/content/projects/monotype-app.html
+++ b/site/content/projects/monotype-app.html
@@ -1,5 +1,5 @@
 ---
-title: English Monotype
+title: English Monotype Game   
 summary: How well do you know your classic humanist typefaces?  
 date: 2010-10-09 14:20:34
 thumbnail: monotype-composite-1.jpg
