Project page should be a little less terrible.

--- a/site/content/projects/tapclip.html
+++ b/site/content/projects/tapclip.html
@@ -8,7 +8,9 @@ thumbnail: tapclip-project-1.jpg
 ---
 _This is a project that brings together a broad set of my research at MIT_ 
 
+{% mark excerpt %}
 TapClip is a specialized capactive sensor board that I'm using as a test-bed for exploring ad-hoc user-interface design, and more broadly, self-made technologies. 
+{% endmark %}
 
 {{ macros.render_figure('<a href="http://www.flickr.com/photos/samjacoby/7929989432/" title="DSC_0426 by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8451/7929989432_54a77a2a56.jpg" width="500" height="333" alt="DSC_0426"></a>', "The clip in action. I drew this one myself, which gives it that weird grown-up-kid quality.")}}
 
