--- a/site/content/projects/index.html
+++ b/site/content/projects/index.html
@@ -18,7 +18,7 @@ title: Projects
 </header>
     {% refer to res.relative_path as post %} 
 
-<p>{%if post.excerpt %}{{ post.excerpt }}{% else %}{{post.html('article>section>p:nth-child(1)') }}{% endif %}</p>
+<p>{%if post.excerpt %}{{ post.excerpt | markdown }}{% else %}{{post.html('article>section>p:nth-child(1)') }}{% endif %}</p>
     {% if res.meta.thumbnail %}
         {% set image='img/listing_' + res.meta.thumbnail %}
         <figure><img src="{{ media_url(image) }}"/></figure>
