Tweaks of various kinds.

--- a/site/content/me/index.html
+++ b/site/content/me/index.html
@@ -2,10 +2,9 @@
 title: Hello
 title_ending: " | Me"
 ---
-I'm a printer, publisher, and programmer in Cambridge, Massachusetts. I'm a student in the [High-Low Tech](http://hlt.media.mit.edu) Research Group at the [MIT Media Lab](http://media.mit.edu). I work with paper and conductive inks.
+I'm a printer, publisher, and programmer in Somerville, Massachusetts, and a student in the [High-Low Tech](http://hlt.media.mit.edu) Research Group at the [MIT Media Lab](http://media.mit.edu). I work with paper and conductive inks.
 
-
-I graduated from Harvard in 2009, where I was a computer science concentrator
+I graduated from Harvard in 2009, where I was a computer science and history concentrator
 
 
 You can find me on [github][0], [flickr][2], & [twitter][1].  
