--- a/site/content/projects/index.html
+++ b/site/content/projects/index.html
@@ -21,7 +21,7 @@ title: Projects
 <p>{%if post.excerpt %}{{ post.excerpt | markdown }}{% else %}{{post.html('article>section>p:nth-child(1)') }}{% endif %}</p>
     {% if res.meta.thumbnail %}
         {% set image='img/listing_' + res.meta.thumbnail %}
-        <figure><img src="{{ media_url(image) }}"/></figure>
+        <figure><a href="{{ res.full_url }}"><img src="{{ media_url(image) }}"/></a></figure>
     {% endif %}
     
     <p><a href="{{ res.full_url }}">read on &raquo;</a></h4>
