--- a/site/content/printing/few-faces-emil-rudolf-weiss.html
+++ b/site/content/printing/few-faces-emil-rudolf-weiss.html
@@ -5,12 +5,17 @@ summary: "A Type Specimen"
 thumbnail: few-faces-1.jpg
 weight: 50
 ---
-I published this small specimen book in two editions, German and English. Weiß designed a number of handsome typefaces that are still in use today. The Weiß Lapidar that appears on the title page below is especially handsome.
+I published this small specimen book in two editions, German and English. Weiß designed a number of handsome typefaces that are still in use today. The Weiß Lapidar that appears on the title page below is especially handsome. Bound by the inestimable [Sarah Creighton](http://sarahcreighton.com), who also is responsible for the stunning pastepapers.
 
 Hand-printed on a Korrex cylinder press on Zerkall papers.
-<div class="gallery">
-    <img src="{{ media_url('img/scaled_few-faces-1.jpg') }}"/>
-    <img src="{{ media_url('img/scaled_few-faces-2.jpg') }}"/>
-</div>
+
+<img src="{{ media_url('img/scaled_few-faces-3.jpg') }}"/>
+<img src="{{ media_url('img/scaled_few-faces-4.jpg') }}"/>
+<img src="{{ media_url('img/scaled_few-faces-5.jpg') }}"/>
+
+
+
+<img src="{{ media_url('img/scaled_few-faces-1.jpg') }}"/>
+<img src="{{ media_url('img/scaled_few-faces-2.jpg') }}"/>
 
 
