What hast thou persisted? Be gone.

--- a/site/content/projects/monotype-app.html
+++ b/site/content/projects/monotype-app.html
@@ -3,6 +3,7 @@ title: English Monotype Game
 summary: How well do you know your classic humanist typefaces?  
 date: 2010-10-09 14:20:34
 thumbnail: monotype-composite-1.jpg
+track: True
 ---
 {{ macros.render_figure("<img src='/media/img/monotype-composite-1.jpg'/>" , "Garamond, Joanna, & Centaur.") }}
 
