--- a/site/content/projects/paper-sensors.html
+++ b/site/content/projects/paper-sensors.html
@@ -3,6 +3,7 @@ title: Paper Sensors
 summary: "Experiments in conductive ink: strain gauges & accelerometers." 
 date: 2012-5-04 19:19:10
 thumbnail: sensors-1.jpg 
+track: True
 ---
 The idea, here, was to recreate some basic MEMS sensors using paper & conductive ink. 
 
