--- a/site/content/projects/tapclip.html
+++ b/site/content/projects/tapclip.html
@@ -5,6 +5,7 @@ date: 2012-08-22 12:57:30
 tags: 
     - SenseClip
 thumbnail: tapclip-project-1.jpg 
+track: True
 ---
 _This is a project that brings together a broad set of my research at MIT_ 
 
