--- a/site/content/projects/ir-led-throwies.html
+++ b/site/content/projects/ir-led-throwies.html
@@ -4,6 +4,7 @@ summary: Use an ordinary remote control to blink LED throwies on and off.
 date: 2012-08-16 10:54:13
 tags:
     - IR Throwies
+track: True
 ---
 {% mark excerpt %}
 I've been toying with with ideas for a quick, easy, scalable project for a large group of teenagers to do together for the Boston [ICA's](http://icaboston.org) Teen Night. 
