I do a different thing now.

--- a/site/content/index.html
+++ b/site/content/index.html
@@ -6,7 +6,8 @@ description: Hello, I'm a printer, programmer and student at the MIT Media Lab. 
 
 {% block splash %}
     <h1 class="splash">
-        Hello, I am a printer, programmer, and a student at <a href="http://hlt.mit.media.edu">High-Low Tech</a> at the <a href="http://media.mit.edu">MIT Media Lab</a>. Here's a bit more <a href="/me/">about me</a>.</h1> 
+        Hello, I am a printer, programmer, and tinkerer. I work at <a href="http://formlabs.com">Formlabs</a>. Here's a bit more <a href="/me/">about me</a>.</h1> 
+    </h1>
 {% endblock %}
 
 {% block content -%}
