--- a/site/content/printing/in-dreams-begin-responsibilities.html
+++ b/site/content/printing/in-dreams-begin-responsibilities.html
@@ -5,11 +5,11 @@ summary: Delmore Schwartz's classic 1935 short story.
 thumbnail: schwartz-1.jpg
 weight: 90
 ---
-The first time I read Delmore Schwartz's classic, "In Dreams Begin Responsibilities," I felt like I'd been clubbed in the head. So simple, so lucid, so precise. It's an antidote to a kind of foggy-minded adolescent angst that a lot of short stories (especially by young people) trends towards--certainly any of my own efforts. He's got some other great ones too, "America, America!" I maybe should've printed that one--actually, definitely.  
+The first time I read Delmore Schwartz's classic, "In Dreams Begin Responsibilities," I felt like I'd been clubbed in the head. So simple, so lucid, so precise. It's an antidote to a kind of foggy-minded adolescent angst that a lot of short stories (especially by young people) trend towards--certainly any of my own efforts. He's got some other great ones in the collection of the same title, too, "America, America!" I maybe should've printed that one--actually, definitely should've. Anyhow, read it.  
 
 This project took a while to get going. For one, the story is still under copyright. [New Directions][0] graciously gave me permission to reprint it. Such permission isn't always forthcoming. (I tried getting in touch with Bruno Schulz's estate at some point to see about printing some of his work, but I didn't have much luck.) 
 
-I worked with [Linn Meyers][3], who furnished the fantastic images, and [Morris Dickstein][morris], who wrote a thoughtful afterword about Schwartz. Dickstein published his [afterword in Tablet][1], if you'd like to take a look. Admittedly, I also got in touch with Lou Reed (or at least, his agency), but I didn't make a whole lot of progress. Then I saw the new [New Directions][2] edition of the [collected stories][0], pretty sweet! I give myself partial credit. 
+I worked with [Linn Meyers][3], who furnished the fantastic images, and [Morris Dickstein][morris], who wrote a thoughtful afterword about Schwartz. Dickstein published his [afterword in Tablet][1], if you'd like to take a look there. Initially, I also got in touch with Lou Reed (or at least, his agency), but I didn't make a whole lot of progress. Then I saw the new [New Directions][2] edition of the [collected stories][0], pretty sweet, with *his* foreword. I give myself partial credit. 
 
 Titling in 20th Century cast by the [Swamp Press][], and text set in Bembo at [The Press and Letterfoundry of Michael & Winifred Bixler][foundry]. Printing on Mohawk Superfine. Bound by the ever-immaculate [Sarah Creighton][4].
 
