Adding right-hand switch nonsense and whatever else is in staging.

--- a/site/content/printing/in-dreams-begin-responsibilities.html
+++ b/site/content/printing/in-dreams-begin-responsibilities.html
@@ -1,7 +1,7 @@
 ---
 author: Delmore Schwartz
 title: In Dreams Begin Responsibilities
-summary: Delmore Schwartz's classic 1935 short story.
+summary: A modern treatment of Delmore Schwartz's classic 1935 short story.
 thumbnail: schwartz-1.jpg
 weight: 90
 ---
