--- a/site/content/projects/motorcycles-are-fun.html
+++ b/site/content/projects/motorcycles-are-fun.html
@@ -1,22 +1,79 @@
 ---
 title: Motorcycles are Fun 
-summary: In which I discover what everyone else already knew, by way of a 1972 Honda CB500 
+summary: In which I discover what everyone else already knew 
 date: 2013-10-21 23:30:01
 thumbnail: motorcycle.jpg 
 track: True
 ---
-{{ macros.render_figure('<a href="http://www.flickr.com/photos/samjacoby/10402047085/" title="IMG_6380 by s_jacoby, on Flickr"><img src="http://farm4.staticflickr.com/3721/10402047085_0039efc45b_z.jpg" width="500" height="" alt="IMG_6380"></a>', "Matching colors (October 2013)") }}
-Obeying a primordial need within the soul, I was compelled to acquire a 1972 Honda motorcycle. As of this writing, it's a 41 year-old machine, and requires continuous attention. That is part of the fun.  
+{{ macros.render_figure('<a href="http://www.flickr.com/photos/samjacoby/10402047085/" title="IMG_6380 by s_jacoby, on Flickr"><img src="http://farm4.staticflickr.com/3721/10402047085_335e05019f.jpg" width="500" height="375" alt="IMG_6380"></a>', "Matching colors (October 2013)") }}
 
-I've found great satisfaction in working : tracing down bad electrical connections, adjusting the tappets, changing the tires,  my hands dabbed with oil, inhaling petroleum's intoxicating bouquet. Why, I just might write [a book](http://en.wikipedia.org/wiki/Zen_and_the_Art_of_Motorcycle_Maintenance) about it.{{ macros.render_footnote("zen-1", "†") }} 
+{% mark excerpt %}
+Obeying a widely-known primordial need within the soul, I was compelled to acquire a 1972 Honda motorcycle. It's a 41 year-old machine and requires continuous attention. That is part of the fun. This is mostly a place for me to keep track of notes. 
+{% endmark %}
+
+I've found great satisfaction in working on it: tracing down corroded electrical connections, adjusting the timing,  changing the tires. I lean back, hands dabbed with oil and inhale the petroleum's intoxicating bouquet... Why, I just might write [a book](http://en.wikipedia.org/wiki/Zen_and_the_Art_of_Motorcycle_Maintenance) about it.{{ macros.render_footnote("zen-1", "†") }} 
+
+
+## Maintenance Table
+I've been working my way down this, little by little. It's pretty handy. 
+
+{{ macros.render_figure('<a href="http://www.flickr.com/photos/samjacoby/10817763986/" title="HSM500550_9 by s_jacoby, on Flickr"><img src="http://farm8.staticflickr.com/7405/10817763986_cd48417a9f.jpg" width="368" height="500" alt="HSM500550_9"></a>', "From when charts were king.") }}
+
+
+## Right-Hand Switch Rebuild
+For awhile I've had terrible problems with the electrics (particular the starter), so I decided to restore that whole pathway, from the right-hand switch (home to the ignition button) on down to the starter solenoid (which feeds the starter motor) on to the starter itself.   
+
+{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449722364/in/set-72157636792385405/player/" width="500" height="375" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "My shattered starter button. A pretty common problem on these bikes, apparently.")}}
+
+There are some great write-ups in the SOHC4 forums on how to rebuild the bars where the switch lives--so I'll leave most of it to the experts. The toughest part of the whole job was simply removing the switch in the first place. Some of the screws were pretty badly rusted and stripped (my fault), so I had to work some magic with a screw extractor. Those things have saved me twice now.
+
+{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12450255044/in/set-72157636792385405/player/" width="480" height="640" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Harbor Freight's finest at work and play. This was really hard.")}}
+
+Removing the screw. A real pain, as I didn't have a vise or anything to hold the bars steady, so they were wiggling all over the place. Kind've had to brace it and get at it from beneath--and then hammer upwards into myself. 
+
+{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449907513/in/set-72157636792385405/player/" width="500" height="375" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Triumph.")}}
+
+The screws were mangled, but rather than getting myself to Ace and figuring out what the threads were to replace, so I ordered replacement screws direct from Bike Bandit. It's insane that this stuff is still stocked, in little individually-wrapped plastic bags with part numbers no less.
+
+{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449225635/in/set-72157636792385405/player/" width="375" height="500" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Removed from the bars and disassembled.")}}
+
+Here's everything pulled off and disassembled. You can see some of the remaining shreds of PVC tubing that the cable ran through (I replaced it with heatshrink).
+
+{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449241225/in/set-72157636792385405/player/" width="375" height="500" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "")}}
+
+
+I re-soldered the leads to the phenolic plate that backs against the kill switch. See that helping hand? It's helping. 
+
+{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449754934/in/set-72157636792385405/player/" width="500" height="204" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "")}}
+
+A dab of grease helps keep the spring-loaded bearing that keeps pressure on the grooved plate in place (I don't know any of the right terms.)
+
+{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449244235/in/set-72157636792385405/player/" width="375" height="500" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "")}}
+
+And polished the grooved connectors that control the high and low beams on the headlight. 
+
+{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449748804/in/set-72157636792385405/player/" width="375" height="500" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "I did the heatshrink over the stove (not pictured for professionalism)")}}
+
+I also cleaned up the connectors to the starter switch (I bought new OEM parts for that, as well as 3D-printed some examples.)
+
+{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449256575/in/set-72157636792385405/player/" width="500" height="375" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "")}}
+
+And then screwed the whole beast back together. 
+
+{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449772924/in/set-72157636792385405/player/" width="500" height="381" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Don't mind the drop shadow...")}}
+
+The final cleaned and re-assembled right-hand switch (RHS) for a 1972 CB500. 
+
+
+
+
+
+
 
 ## Resources
 - [SOHC4 Forums](http://forums.sohc4.com)
-
-- [CB500 Clymer Manual]()
-
-- [CB500 Shop Manuel](PDF)
-
+- [CB500 Clymer Manual](http://www.amazon.com/Cb350-550Cc-1971-1978-Clymer-Motorcycle-Manuals/dp/0892876530/ref=sr_1_1?s=books&ie=UTF8&qid=1383324794&sr=1-1&keywords=cb500+clymer)
+- [Honda CB500 Manuals](http://www.sohc4.net/cb500-manuals/ ) (Courtesy of SOHC4)
 - [New England Honda Guys](http://nehondaguys.info/)
 
 {{ macros.render_footnote("zen-1", "†", "Never read it. Hear it's not really about motorcycles.") }}
