--- a/site/content/projects/motorcycles-are-fun.html
+++ b/site/content/projects/motorcycles-are-fun.html
@@ -48,9 +48,9 @@ I re-soldered the leads to the phenolic plate that backs against the kill switch
 
 A dab of grease helps keep the spring-loaded bearing that keeps pressure on the grooved plate in place (I don't know any of the right terms.)
 
-{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449244235/in/set-72157636792385405/player/" width="375" height="500" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "")}}
+{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449244235/in/set-72157636792385405/player/" width="375" height="500" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Fascinating.")}}
 
-And polished the grooved connectors that control the high and low beams on the headlight. 
+I polished the tongued contacts that control the high and low beams on the headlight. 
 
 {{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449748804/in/set-72157636792385405/player/" width="375" height="500" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "I did the heatshrink over the stove (not pictured for professionalism)")}}
 
@@ -64,7 +64,16 @@ And then screwed the whole beast back together.
 
 The final cleaned and re-assembled right-hand switch (RHS) for a 1972 CB500. 
 
+## Starter Solenoid
+Online, a number of peope suggest checking out your starter solenoid to make sure that it's routing current to the starter, correctly.
 
+{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449415763/player/" width="500" height="391" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "CB500 starter solenoid, opened up.")}}
+
+My solenoid wasn't all that dirty and it seemed to be working correctly. I could hear the click of it firing when I hit the ignition--but I didn't know much about how it worked or whether the contacts themselves were making a good enough connection.
+
+I cleaned it up some and then ran some tests with a bench-top supply at work. Draws a fair bit of current to trigger, which makes sense. It's a beefy little unit. Of course, I also looked on Ebay where new replacement solenoids are being sold for like $8, but restoring them is more fun.  
+
+<iframe width="560" height="315" src="//www.youtube.com/embed/5i1YHoF_J6s?rel=0" frameborder="0" allowfullscreen></iframe>
 
 
 
