--- a/site/content/printing/sesquipedality.html
+++ b/site/content/printing/sesquipedality.html
@@ -1,5 +1,6 @@
 ---
 title: Sesquipedality
+subtitle: A Primer for the Aspiring Pedant
 summary: "A small collection of difficult words."
 thumbnail: sesquip-1.jpg
 weight: 60
