--- a/site/content/projects/motorcycles-are-fun.html
+++ b/site/content/projects/motorcycles-are-fun.html
@@ -65,7 +65,7 @@ And then screwed the whole beast back together.
 The final cleaned and re-assembled right-hand switch (RHS) for a 1972 CB500. 
 
 ## Starter Solenoid
-Online, a number of peope suggest checking out your starter solenoid to make sure that it's routing current to the starter, correctly.
+Online, a number of people suggest checking out your starter solenoid to make sure that it's routing current to the starter, correctly.
 
 {{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449415763/player/" width="500" height="391" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "CB500 starter solenoid, opened up.")}}
 
