--- a/site/content/projects/motorcycles-are-fun.html
+++ b/site/content/projects/motorcycles-are-fun.html
@@ -5,6 +5,7 @@ date: 2013-10-21 23:30:01
 thumbnail: motorcycle.jpg 
 track: True
 ---
+
 {{ macros.render_figure('<a href="http://www.flickr.com/photos/samjacoby/10402047085/" title="IMG_6380 by s_jacoby, on Flickr"><img src="http://farm4.staticflickr.com/3721/10402047085_335e05019f.jpg" width="500" height="375" alt="IMG_6380"></a>', "Matching colors (October 2013)") }}
 
 {% mark excerpt %}
@@ -74,6 +75,14 @@ My solenoid wasn't all that dirty and it seemed to be working correctly. I could
 I cleaned it up some and then ran some tests with a bench-top supply at work. Draws a fair bit of current to trigger, which makes sense. It's a beefy little unit. Of course, I also looked on Ebay where new replacement solenoids are being sold for like $8, but restoring them is more fun.  
 
 <iframe width="560" height="315" src="//www.youtube.com/embed/5i1YHoF_J6s?rel=0" frameborder="0" allowfullscreen></iframe>
+
+## Work Log
+I decided I should be keeping a dated worklog -- it's just a useful thing to do. I've been doing it by hand, but what else is the internet for? 
+
+Date | Item | Work
+---|---|---
+March 10, 2014 | Petcock | Rebuilt and cleaned (again). Shouldn't be leaking anymore.
+March 10, 2014 | Airbox | Cover added from parts bike
 
 
 
