Adding more work.

--- a/site/content/projects/motorcycles-are-fun.html
+++ b/site/content/projects/motorcycles-are-fun.html
@@ -81,8 +81,18 @@ I decided I should be keeping a dated worklog -- it's just a useful thing to do.
 
 Date | Item | Work
 ---|---|---
-March 10, 2014 | Petcock | Rebuilt and cleaned (again). Shouldn't be leaking anymore.
-March 10, 2014 | Airbox | Cover added from parts bike
+July 2013 | Oil | Changed
+July 2013 | Oil filter | Changed
+July 2013 | Clutch | Clutch cover opened, cleaned, clutch adjusted
+August 2013 | Petcock | Fuel filter screen checked
+August 2013 | Fuel lines | Gas line replaced (with 5.5mm original) 
+Septemer 2013 | Tires | Replaced tires (Bridgestone S11), professionally-mounted & balanced
+November 2013 | Spark plugs | Replaced original plugs with new NGK 12mm D7EA; new boots as well 
+November 2013 | Contact points | Checked & adjusted 
+February 2014 | Cam chain | Adjusted 
+February 2014 | Valves | Checked & adjusted
+March 2014 | Petcock | Rebuilt and cleaned (again). Shouldn't be leaking anymore.
+March 2014 | Airbox | Cover added from parts bike
 
 
 
