Let's be grown-ups.

--- a/site/content/projects/motorcycles.html
+++ b/site/content/projects/motorcycles.html
@@ -1,5 +1,5 @@
 ---
-title: Motorcycles are Fun 
+title: Motorcycles 
 summary: In which I discover what everyone else already knew 
 date: 2013-10-21 23:30:01
 thumbnail: motorcycle.jpg 
