--- a/site/content/printing/darwins-orchid.html
+++ b/site/content/printing/darwins-orchid.html
@@ -33,5 +33,5 @@ As for Darwin? Apparently, he made it through that lousy day. His "Book for Murr
 
 "Darwin's Orchid" is set in Palintino and digitally printed by the Puritan Press in an edition of 75.   
 
-{{ macros.render_figure('<a href="https://www.flickr.com/photos/samjacoby/13490971904" title="darwin-poster-5 by Sam Jacoby, on Flickr"><img src="https://farm4.staticflickr.com/3803/13490971904_1bd92dbdf6_c.jpg" width="534" height="800" alt="darwin-poster-5"></a>, "Darwin's Orchid") }}
+{{ macros.render_figure('<a href="https://www.flickr.com/photos/samjacoby/13490971904" title="darwin-poster-5 by Sam Jacoby, on Flickr"><img src="https://farm4.staticflickr.com/3803/13490971904_1bd92dbdf6_c.jpg" width="534" height="800" alt="darwin-poster-5"></a>', "Darwin's Orchid") }}
 
