Adding IDC download. Why not?

--- a/site/content/projects/tapclip.html
+++ b/site/content/projects/tapclip.html
@@ -15,4 +15,11 @@ TapClip is a specialized capactive sensor board that I'm using as a test-bed for
 
 {{ macros.render_figure('<a href="http://www.flickr.com/photos/samjacoby/7929989432/" title="DSC_0426 by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8451/7929989432_54a77a2a56.jpg" width="500" height="333" alt="DSC_0426"></a>', "The clip in action. I drew this one myself, which gives it that weird grown-up-kid quality.")}}
 
-I've documented some of my process in a variety of briefer posts. Take a look.  
+## StoryClip
+
+Ultimately, I packaged what I'd done with the board into a submission for **Interaction Design & Children 2013**, taking place in New York City. Happily it was accepted. You can download it for your reading pleasure below.   
+
+**Drawing the Electric: Storytelling with Conductive Ink**, Sam Jacoby & Leah Buechley, **Interaction Design and Children ’13**, June 24–27, 2013, New York City, New York, United States. [(pdf)](/media/files/sjacoby_idc2013.pdf)
+
+
+I've also documented some of my process in a variety of briefer posts. Take a look.  
