Removing link to ec2 instance. Lazzyyyy.

--- a/site/content/projects/monotype-app.html
+++ b/site/content/projects/monotype-app.html
@@ -13,8 +13,7 @@ In the fine printing community, there is a slight kerfuffle around the aesthetic
 
 The first typefaces adapted for phototypesetting and digital printing were, as a rule, too light and too spindly. They were also, generally, somewhat malformed. While high-quality metal typefaces were cut slightly differently at various sizes--so 18 pt. Bembo was not simply a scaled up facsimile of 10 pt. Bembo (or vice versa), but somewhat elaborated upon--digital typefaces had no such subtlety.  
 
+At any rate, this is all a very long way of saying, one of the first Django projects I put together was a little typography-training game. Rather than using digital copies of the typefaces, though, I scanned each letter-form from a specimen book of English Monotype that a [friend](http://katranpress.com) let me borrow. Other than that, there's not that much to it. <span class="strike">I haven't had this hosted live in awhile, but I recently started looking into Amazon Web Services, which made setting up an `ec2` instance a snap.</span> 
 
-At any rate, this is all a very long way of saying, one of the first django projects I put together was a little typography-training game. Rather than using digital copies of the typefaces, though, I scanned each letter-form from a specimen book of English Monotype that a [friend](http://katranpress.com) let me borrow. Other than that, there's not that much to it. I haven't had this hosted live in awhile, but I recently started looking into Amazon Web Services, which made setting up an `ec2` instance a snap. 
-
-At any rate, try your hand: [Classic Typefaces](/apps/monotype/). 
-
+<span class="strike">At any rate, try your hand: [Classic Typefaces](#).</span> 
+*I killed the instance, as it was too expensive to keep running after my free year. Thought I'd use it for other things too, but mostly use Heroku now. Anyhow, it's damn old now.* 
