Latest work. Actually, this is behind. Clutch, etc.

--- a/site/content/projects/motorcycles.html
+++ b/site/content/projects/motorcycles.html
@@ -76,6 +76,15 @@ I cleaned it up some and then ran some tests with a bench-top supply at work. Dr
 
 <iframe width="560" height="315" src="//www.youtube.com/embed/5i1YHoF_J6s?rel=0" frameborder="0" allowfullscreen></iframe>
 
+## Clutch
+I've started tackling the clutch in earnest. They're notorious in CB500s and Honda overhauled them in the 550. Mine has been giving me trouble on-and-off since I picked it up, but recently, it's started to grow worse. It's close to impossible to hit neutral while hot -- which is pretty standard fare -- but more troubling, the clutch hasn't been disengaging while in first, so I've got to keep the engine revved to prevent it from bogging down. One hand on the throttle, one on the brake -- not a good situation. 
+
+I started by breaking into the parts bike, just to get a sense of how the pieces fit together -- which has been useful. It's a bit nerve-wracking to begin wrenching without having any idea what's in there (though I have the manuel), so it's nice to have something to play with. Tackling the clutch has been a chore. The old gasket is just about fused to the crankcase, and it's taking a couple of soaks with various solvents and a razorblade to clean it off. Nice and shiny now, though. 
+
+I picked up some synthetic Mobile grease, kind've for no reason other than it was the most expensive, and I figured why-the-hell-not. Turned out to be red, which I don't like.  
+
+The lifter assembly and bearing went in pretty smoothly. I found a new pushrod on Ebay -- technically belongs to a CB450, but it seems to fit in there pretty nicely (same 8mm diameter), and it's i good shape. Getting an OEM clutch cable was a good idea too. A clutch cable was one of the first things that I bought when I got the bike -- but now, the better part of a year later, I know that it's some non-OEM junk that's not even close to the right length. 
+
 ## Work Log
 I decided I should be keeping a dated worklog -- it's just a useful thing to do. I've been doing it by hand, but what else is the internet for? 
 
@@ -93,9 +102,11 @@ February 2014 | Cam chain | Adjusted
 February 2014 | Valves | Checked & adjusted
 March 2014 | Petcock | Rebuilt and cleaned (again). Shouldn't be leaking anymore.
 March 2014 | Airbox | Cover added from parts bike
-
-
-
+March 2014 | Hardbags | Added a pair of white Shoei's
+April 2014 | Oil | Changed, castrol 10W-40
+April 2014  | Seals | Replaced right-crank gasket
+April 2014 | Clutch | Checked clutch plates for warping, wear
+April 2013 | Clutch | Replaced clutch cable & lifter rod.
 
 
 ## Resources
