--- a/site/content/projects/ir-led-throwies.html
+++ b/site/content/projects/ir-led-throwies.html
@@ -2,6 +2,7 @@
 title: Infra-Red LED Throwies
 summary: Use an ordinary remote control to blink LED throwies on and off. 
 date: 2012-08-16 10:54:13
+thumbnail: ir_throwie.jpg 
 tags:
     - IR Throwies
 track: True
