--- a/site/content/projects/motorcycles.html
+++ b/site/content/projects/motorcycles.html
@@ -103,10 +103,12 @@ February 2014 | Valves | Checked & adjusted
 March 2014 | Petcock | Rebuilt and cleaned (again). Shouldn't be leaking anymore.
 March 2014 | Airbox | Cover added from parts bike
 March 2014 | Hardbags | Added a pair of white Shoei's
-April 2014 | Oil | Changed, castrol 10W-40
+April 2014 | Oil | Changed, Castrol 10W-40
 April 2014  | Seals | Replaced right-crank gasket
 April 2014 | Clutch | Checked clutch plates for warping, wear
-April 2013 | Clutch | Replaced clutch cable & lifter rod.
+April 2014 | Clutch | Replaced clutch cable & lifter rod.
+April 2014 | Ignition | Rebuilt and refinished key assembly  
+June 2014 | Fork | Replaced fork seals & changed fork oil 
 
 
 ## Resources
